--- a/views/list.njk
+++ b/views/list.njk
@@ -10,6 +10,8 @@
       <div class="col-lg-6 col-md-12">
         <h1>{{list.title}}</h1>
         <p>{{list.min_price}} €</p>
+        <h1>rating {{list.rating}}</h1>
+
         {% for i in range(1, 6) -%}
         {% if list.rating >= (i) %}
         <span class="fa fa-star checked"></span>
