--- a/views/layout.njk
+++ b/views/layout.njk
@@ -30,13 +30,23 @@ tr:nth-child(even) {
 .checked {
     color: orange;
 }
+.bck {
+background-image: url("./images/top.jpeg");
+height:100%
+}
+.jumbotron {
+  margin-bottom: 0px;
+  /* background-image: url(https://www.decathlon.co.uk/store//en/0070084700847/photo-mag1950395172.JPG); */
+  background-image: url(/images/top.jpeg);
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+}
 </style>
   </head>
   <body>
-    <div class="container-fluid text-center text-white bg-primary">
-      <div class="row">
-        <div class="col-lg-12 col-md-6 col-sm-12">Decathlon</div>
-      </div>
+    <div class="container-fluid text-center text-white bg-primary jumbotron">
     </div>
 
     {% block content %}{% endblock %}
