--- a/views/layout.njk
+++ b/views/layout.njk
@@ -36,8 +36,8 @@ height:100%
 }
 .jumbotron {
   margin-bottom: 0px;
-  /* background-image: url(https://www.decathlon.co.uk/store//en/0070084700847/photo-mag1950395172.JPG); */
-  background-image: url(/images/top.jpeg);
+  background-image: url(https://www.decathlon.co.uk/store//en/0070084700847/photo-mag1950395172.JPG);
+  /* background-image: url(/images/top.jpeg); */
   background-position: 0% 25%;
   background-size: cover;
   background-repeat: no-repeat;
